--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -2,10 +2,10 @@
     <div class="row">
       <div class="col-md-6 offset-md-3">
         <h2 class="text-center text-dark mt-5">Login Form</h2>
-        <div class="text-center mb-5 text-dark">Made with bootstrap</div>
+        <div class="text-center mb-5 text-dark"></div>
         <div class="card my-5">
 
-          <form class="card-body cardbody-color p-lg-5">
+          <form class="card-body cardbody-color p-lg-5"[formGroup]="loginAddForm">
 
             <div class="text-center">
               <img src="https://cdn.pixabay.com/photo/2016/03/31/19/56/avatar-1295397__340.png" class="img-fluid profile-image-pic img-thumbnail rounded-circle my-3"
@@ -13,13 +13,13 @@
             </div>
 
             <div class="mb-3">
-              <input type="text" class="form-control" id="Username" aria-describedby="emailHelp"
-                placeholder="User Name">
+              <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                placeholder="E-mail"  formControlName="email" >
             </div>
             <div class="mb-3">
-              <input type="password" class="form-control" id="password" placeholder="password">
+              <input type="password" class="form-control" id="password" placeholder="Password"  formControlName="password">
             </div>
-            <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100">Login</button></div>
+            <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100" (click)="login()">Login</button></div>
             <div id="emailHelp" class="form-text text-center mb-5 text-dark">Not
               Registered? <a href="#" class="text-dark fw-bold"> Create an
                 Account</a>
