--- a/src/app/components/applicant/create-applicant/create-applicant.component.html
+++ b/src/app/components/applicant/create-applicant/create-applicant.component.html
@@ -1,4 +1,5 @@
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-applicant" >Aday Ekle</button>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5"
+  routerLink="/add-applicant">Aday Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Aday Listesi</h1>
 
@@ -29,9 +30,11 @@
       <td>{{applicant.about}}</td>
       <td>
         <div>
-          <button type="button" class="btn btn-primary mx-3">Detay</button>
-          <button type="button" class="btn btn-secondary mx-3" routerLink="/update-applicant/{{applicant.id}}" >Düzenle</button>
-          <button type="button" class="btn btn-danger mx-3" (click)="deleteApplicant(applicant)" >Sil</button>
+          <button type="button" class="btn btn-primary mx-3"
+            routerLink="/applicant-detail/{{applicant.id}}">Detay</button>
+          <button type="button" class="btn btn-secondary mx-3"
+            routerLink="/update-applicant/{{applicant.id}}">Düzenle</button>
+          <button type="button" class="btn btn-danger mx-3" (click)="deleteApplicant(applicant)">Sil</button>
         </div>
 
       </td>
