--- a/src/app/components/black-list/create-black-list/create-black-list.component.html
+++ b/src/app/components/black-list/create-black-list/create-black-list.component.html
@@ -1,36 +1,39 @@
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-blacklist">Kara Listeye Ekle</button>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5"
+  routerLink="/add-blacklist">Kara Listeye Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Kara Liste</h1>
 
 <table class="table" style="margin-left: 100px;">
-    <thead>
-      <tr style="text-align:center">
-        <th scope="col">Id</th>
-        <th scope="col">Applicant Id</th>
-        <th scope="col">Tarih</th>
-        <th scope="col">Neden</th>
-        <th scope="col">İşlemler</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr style="text-align:center" *ngFor= "let blacklist of blacklists">
- 
-        <td>{{blacklist.id}}</td>
-        <td>{{blacklist.applicantId}}</td>
-        <td>{{blacklist.date}}</td>
-        <td>{{blacklist.reason}}</td>
-        <td>
-          <div>
-          <button type="button" class="btn btn-primary mx-3">Detay</button>
-          <button  type="button" class="btn btn-secondary mx-3" routerLink="/update-blacklist/{{blacklist.id}}">Düzenle</button>
+  <thead>
+    <tr style="text-align:center">
+      <th scope="col">Id</th>
+      <th scope="col">Applicant Id</th>
+      <th scope="col">Tarih</th>
+      <th scope="col">Neden</th>
+      <th scope="col">İşlemler</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr style="text-align:center" *ngFor="let blacklist of blacklists">
+
+      <td>{{blacklist.id}}</td>
+      <td>{{blacklist.applicantId}}</td>
+      <td>{{blacklist.date}}</td>
+      <td>{{blacklist.reason}}</td>
+      <td>
+        <div>
+          <button type="button" class="btn btn-primary mx-3"
+            routerLink="/blacklist-detail/{{blacklist.id}}">Detay</button>
+          <button type="button" class="btn btn-secondary mx-3"
+            routerLink="/update-blacklist/{{blacklist.id}}">Düzenle</button>
           <button type="button" class="btn btn-danger mx-3" (click)="deleteBlacklist(blacklist)">Sil</button>
-          </div>
-         
-        </td>
-      </tr>
+        </div>
 
-      
+      </td>
+    </tr>
 
-      
-    </tbody>
-  </table>
+
+
+
+  </tbody>
+</table>
