--- a/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
+++ b/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
@@ -1,42 +1,43 @@
-
-
-<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5" routerLink="/add-bootcamp">Bootcamp Ekle</button>
+<button type="button" style="float:right; margin-right: 200px;" class="btn btn-success btn-lg mt-5"
+  routerLink="/add-bootcamp">Bootcamp Ekle</button>
 
 <h1 class="mt-5 mb-5" style="text-align: center;">Bootcamp Listesi</h1>
 
 <table class="table" style="margin-left: 100px;">
-    <thead>
-      <tr style="text-align:center">
-        <th scope="col">id</th>
-        <th scope="col">Instructor Id</th>
-        <th scope="col">Name</th>
-        <th scope="col">Date Start</th>
-        <th scope="col">Date End</th>
-        <th scope="col">State</th>
-        <th  scope="col">İşlemler</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr style="text-align:center" *ngFor= "let bootcamp of bootcamps">
- 
-        <td>{{bootcamp.id}}</td>
-        <td>{{bootcamp.instructorId}}</td>
-        <td>{{bootcamp.name}}</td>
-        <td>{{bootcamp.dateStart}}</td>
-        <td>{{bootcamp.dateEnd}}</td>
-        <td>{{bootcamp.state}}</td>
-        <td>
-          <div>
-          <button type="button" class="btn btn-primary mx-3">Detay</button>
-          <button type="button" class="btn btn-secondary mx-3" routerLink="/update-bootcamp/{{bootcamp.id}}">Düzenle</button>
+  <thead>
+    <tr style="text-align:center">
+      <th scope="col">id</th>
+      <th scope="col">Instructor Id</th>
+      <th scope="col">Name</th>
+      <th scope="col">Date Start</th>
+      <th scope="col">Date End</th>
+      <th scope="col">State</th>
+      <th scope="col">İşlemler</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr style="text-align:center" *ngFor="let bootcamp of bootcamps">
+
+      <td>{{bootcamp.id}}</td>
+      <td>{{bootcamp.instructorId}}</td>
+      <td>{{bootcamp.name}}</td>
+      <td>{{bootcamp.dateStart}}</td>
+      <td>{{bootcamp.dateEnd}}</td>
+      <td>{{bootcamp.state}}</td>
+      <td>
+        <div>
+          <button type="button" class="btn btn-primary mx-3"
+            routerLink="/bootcamp-detail/{{bootcamp.id}}">Detay</button>
+          <button type="button" class="btn btn-secondary mx-3"
+            routerLink="/update-bootcamp/{{bootcamp.id}}">Düzenle</button>
           <button type="button" class="btn btn-danger mx-3" (click)="delete(bootcamp)">Sil</button>
-          </div>
-         
-        </td>
-      </tr>
+        </div>
 
-      
+      </td>
+    </tr>
 
-      
-    </tbody>
-  </table>
+
+
+
+  </tbody>
+</table>
