--- a/src/app/components/bootcamp/update-bootcamp/update-bootcamp.component.html
+++ b/src/app/components/bootcamp/update-bootcamp/update-bootcamp.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-6"></div>
         <form [formGroup]="bootcampUpdateForm" *ngIf="bootcamp">
             <div class="mb-3">
-              <button type="button" class="btn btn-info mt-5" routerLink="/bootcampList">Geri Dön</button>
+              <button type="button" class="btn btn-outline-dark mt-5" routerLink="/bootcampList">Geri Dön</button>
                 <h2 class="text-center mt-3">Bootcamp Ekle</h2>
               <label for="exampleInputEmail1" class="form-label">Instructor Id</label>
               <input formControlName="instructorId" type="number" class="form-control" placeholder="instructorId" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -24,7 +24,7 @@
                 <label for="exampleInputEmail1" class="form-label">State </label>
                 <input formControlName="state" type="number" class="form-control" placeholder="state" id="exampleInputEmail1" aria-describedby="emailHelp">
               </div>
-             
+
             <button (click)="updateBootcamp()" type="submit" class="btn btn-warning">Güncelle</button>
 
           </form>
