--- a/src/app/components/instructor/create-instructor/create-instructor.component.html
+++ b/src/app/components/instructor/create-instructor/create-instructor.component.html
@@ -31,7 +31,8 @@
       <td>{{instructor.companyName}}</td>
       <td>
         <div>
-          <button type="button" class="btn btn-primary mx-3">Detay</button>
+          <button type="button" class="btn btn-primary mx-3"
+            routerLink="/instructor-detail/{{instructor.id}}">Detay</button>
           <button type="button" class="btn btn-secondary mx-3"
             routerLink="/update-instructor/{{instructor.id}}">Düzenle</button>
           <button type="button" class="btn btn-danger mx-3" (click)="delete(instructor)">Sil</button>
