--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" routerLink="/login">Giriş Yap</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" >Kayıt Ol</a>
+                    <a class="nav-link" routerLink="/register">Kayıt Ol</a>
                 </li>
                 
 
