add-child-system

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="sidenav fixed-start">
+<!-- <div class="sidenav fixed-start">
   <app-sidebar></app-sidebar>
 </div>
 <main class="main-content border-radius-lg">
@@ -7,7 +7,8 @@
     <router-outlet></router-outlet>  
   </div>
 </main>
-<app-settings></app-settings>
+<app-settings></app-settings> -->
 
 
+<router-outlet></router-outlet>
 
