--- a/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
+++ b/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
@@ -5,7 +5,7 @@
       <div class="card mb-4">
         <div class="card-header pb-0">
           <h6 style="float:left; font-size: 2rem;"  >Bootcamp Listesi <button type="button"  class="btn btn-success btn-lg "
-            routerLink="/add-bootcamp">Bootcamp Ekle</button> </h6>
+            routerLink="add-bootcampList">Bootcamp Ekle</button> </h6>
        
         </div>
         <div class="card-body px-0 pt-0 pb-2">
@@ -58,9 +58,9 @@
                 <td>
                   <div>
                     <button type="button" class="btn btn-primary mx-3"
-                      routerLink="/bootcamp-detail/{{bootcamp.id}}">Detay</button>
+                      routerLink="bootcampList-detail/{{bootcamp.id}}">Detay</button>
                     <button type="button" class="btn btn-secondary mx-3"
-                      routerLink="/update-bootcamp/{{bootcamp.id}}">Düzenle</button>
+                      routerLink="update-bootcampList/{{bootcamp.id}}">Düzenle</button>
                     <button type="button" class="btn btn-danger mx-3" (click)="delete(bootcamp)">Sil</button>
                   </div>
           
