--- a/src/app/components/instructor/add-instructor/add-instructor.component.html
+++ b/src/app/components/instructor/add-instructor/add-instructor.component.html
@@ -34,7 +34,7 @@
       </div>
     
     <button (click)="add()" style="margin-right:15px" type="submit" class="btn btn-warning">Ekle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/instructor">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="admin/admin-instructor">Geri Dön</button>
     </form>
   </div>
 </div>
