--- a/src/app/components/applicant/create-applicant/create-applicant.component.html
+++ b/src/app/components/applicant/create-applicant/create-applicant.component.html
@@ -5,7 +5,7 @@
       <div class="card mb-4">
         <div class="card-header pb-0">
           <h6 style="float:left; font-size: 2rem;"  >Aday Listesi<button type="button"  class="btn btn-success btn-lg "
-            routerLink="/add-applicant">Ekle</button> </h6>
+            routerLink="add-applicant">Ekle</button> </h6>
        
         </div>
         <div class="card-body px-0 pt-0 pb-2">
@@ -77,9 +77,9 @@
                 <td>
                   <div>
                     <button type="button" class="btn btn-primary mx-3"
-                      routerLink="/applicant-detail/{{applicant.id}}">Detay</button>
+                      routerLink="applicant-detail/{{applicant.id}}">Detay</button>
                     <button type="button" class="btn btn-secondary mx-3"
-                      routerLink="/update-applicant/{{applicant.id}}">Düzenle</button>
+                      routerLink="update-applicant/{{applicant.id}}">Düzenle</button>
                     <button type="button" class="btn btn-danger mx-3"  (click)="deleteApplicant(applicant)">Sil</button>
                   </div>
           
