--- a/src/app/components/application/create-application/create-application.component.html
+++ b/src/app/components/application/create-application/create-application.component.html
@@ -5,7 +5,7 @@
       <div class="card mb-4">
         <div class="card-header pb-0">
           <h6 style="float:left; font-size: 2rem;"  >Başvuru Listesi <button type="button"  class="btn btn-success btn-lg "
-            routerLink="/add-application">Başvuru Ekle</button> </h6>
+            routerLink="add-application">Başvuru Ekle</button> </h6>
        
         </div>
         <div class="card-body px-0 pt-0 pb-2">
@@ -54,9 +54,9 @@
                 <td>
                   <div>
                     <button type="button" class="btn btn-primary mx-3"
-                      routerLink="/application-detail/{{application.id}}">Detay</button>
+                      routerLink="application-detail/{{application.id}}">Detay</button>
                     <button type="button" class="btn btn-secondary mx-3"
-                      routerLink="/update-application/{{application.id}}">Düzenle</button>
+                      routerLink="update-application/{{application.id}}">Düzenle</button>
                     <button type="button" class="btn btn-danger mx-3"  (click)="deleteApplication(application)">Sil</button>
                   </div>
           
