--- a/src/app/components/instructor/create-instructor/create-instructor.component.html
+++ b/src/app/components/instructor/create-instructor/create-instructor.component.html
@@ -5,7 +5,7 @@
       <div class="card mb-4">
         <div class="card-header pb-0">
           <h6 style="float:left; font-size: 2rem;"  >Eğitmen Listesi <button type="button"  class="btn btn-success btn-lg "
-            routerLink="/add-instructor">Eğitmen ekle</button> </h6>
+            routerLink="add-instructor">Eğitmen ekle</button> </h6>
        
         </div>
         <div class="card-body px-0 pt-0 pb-2">
@@ -69,9 +69,9 @@
                 <td>
                   <div>
                     <button type="button" class="btn btn-primary mx-3"
-                      routerLink="/instructor-detail/{{instructor.id}}">Detay</button>
+                      routerLink="instructor-detail/{{instructor.id}}">Detay</button>
                     <button type="button" class="btn btn-secondary mx-3"
-                      routerLink="/update-instructor/{{instructor.id}}">Düzenle</button>
+                      routerLink="update-instructor/{{instructor.id}}">Düzenle</button>
                     <button type="button" class="btn btn-danger mx-3"  (click)="delete(instructor)">Sil</button>
                   </div>
           
