--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -1,4 +1,19 @@
-<div class="container-fluid py-4">
+
+
+ <div class="sidenav fixed-start">
+  <app-sidebar></app-sidebar>
+</div>
+<main class="main-content border-radius-lg">
+  
+  <div class="container-fluid py-4">
+    <router-outlet></router-outlet>  
+  </div>
+</main>
+
+
+
+
+<!-- <div class="container-fluid py-4">
     <div class="row">
       <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
         <div class="card">
@@ -609,4 +624,5 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
+
