add-home-panel&add-applicant-panel

--- a/src/app/pages/applicant/applicant.component.html
+++ b/src/app/pages/applicant/applicant.component.html
@@ -1,1 +1,115 @@
-<p>applicant works!</p>
+<main class="main-content border-radius-lg">
+ <app-applicant-navbar></app-applicant-navbar>
+  <div class="container-fluid py-4">
+    <router-outlet></router-outlet>  
+  </div>
+</main>
+
+
+<div class="container">
+    <div class="row">
+        <div class="dropdown mb-5 mt-4">
+            <a  class="btn bg-gradient-dark dropdown-toggle " data-bs-toggle="dropdown" id="navbarDropdownMenuLink2">
+                 Eğitmenler
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
+                <li>
+                    <a class="dropdown-item">
+                       Engin Demiroğ
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item">
+                       Sadık Turan
+                    </a>
+                </li>
+            </ul>
+          </div>
+    </div>
+   
+    <div class="row" >
+        <div class="col-md-4 mb-6 "> 
+         
+          <a href="javascript:;">
+              <div class="card card-background move-on-hover">
+                <div class="full-background" style="background-image: url('https://images.unsplash.com/photo-1521620112244-f1d36327c766?ixlib=rb-1.2.1&amp;ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;auto=format&amp;fit=crop&amp;w=1300&amp;q=80')"></div>
+                <div class="card-body pt-12">
+                  <h4 class="text-white">Angular Bootcamp</h4>
+                  <p>Website visitors today demand a frictionless user expericence — especially when using search. Because of the hight standards.</p>
+                </div>
+              </div>
+            </a>
+         
+        </div>
+
+
+        <div class="col-md-4">
+            <a href="javascript:;">
+              <div class="card card-background move-on-hover">
+                <div class="full-background" style="background-image: url('https://images.unsplash.com/photo-1521620112244-f1d36327c766?ixlib=rb-1.2.1&amp;ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;auto=format&amp;fit=crop&amp;w=1300&amp;q=80')"></div>
+                <div class="card-body pt-12">
+                  <h4 class="text-white">React Bootcamp</h4>
+                  <p>Website visitors today demand a frictionless user expericence — especially when using search. Because of the hight standards.</p>
+                </div>
+              </div>
+            </a>
+        </div>
+
+
+        <div class="col-md-4">
+            <a href="javascript:;">
+              <div class="card card-background move-on-hover">
+                <div class="full-background" style="background-image: url('https://images.unsplash.com/photo-1521620112244-f1d36327c766?ixlib=rb-1.2.1&amp;ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;auto=format&amp;fit=crop&amp;w=1300&amp;q=80')"></div>
+                <div class="card-body pt-12">
+                  <h4 class="text-white">Javascript Bootcamp</h4>
+                  <p>Website visitors today demand a frictionless user expericence — especially when using search. Because of the hight standards.</p>
+                </div>
+              </div>
+            </a>
+        </div>
+
+
+        <div class="col-md-4">
+            <a href="javascript:;">
+              <div class="card card-background move-on-hover">
+                <div class="full-background" style="background-image: url('https://images.unsplash.com/photo-1521620112244-f1d36327c766?ixlib=rb-1.2.1&amp;ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;auto=format&amp;fit=crop&amp;w=1300&amp;q=80')"></div>
+                <div class="card-body pt-12">
+                  <h4 class="text-white">Java Bootcamp</h4>
+                  <p>Website visitors today demand a frictionless user expericence — especially when using search. Because of the hight standards.</p>
+                </div>
+              </div>
+            </a>
+        </div>
+
+
+
+        <div class="col-md-4">
+            <a href="javascript:;">
+              <div class="card card-background move-on-hover">
+                <div class="full-background" style="background-image: url('https://images.unsplash.com/photo-1521620112244-f1d36327c766?ixlib=rb-1.2.1&amp;ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;auto=format&amp;fit=crop&amp;w=1300&amp;q=80')"></div>
+                <div class="card-body pt-12">
+                  <h4 class="text-white">Sql Server Bootcamp</h4>
+                  <p>Website visitors today demand a frictionless user expericence — especially when using search. Because of the hight standards.</p>
+                </div>
+              </div>
+            </a>
+        </div>
+
+        <div class="col-md-4">
+            <a href="javascript:;">
+              <div class="card card-background move-on-hover">
+                <div class="full-background" style="background-image: url('https://images.unsplash.com/photo-1521620112244-f1d36327c766?ixlib=rb-1.2.1&amp;ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;auto=format&amp;fit=crop&amp;w=1300&amp;q=80')"></div>
+                <div class="card-body pt-12">
+                  <h4 class="text-white">QA Test Bootcamp</h4>
+                  <p>Website visitors today demand a frictionless user expericence — especially when using search. Because of the hight standards.</p>
+                </div>
+              </div>
+            </a>
+        </div>
+
+
+
+
+    </div>  
+
+</div>
