edit login register

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -86,7 +86,7 @@
                 <div class="text-center">
                   <button type="button" class="btn bg-gradient-dark w-100 my-4 mb-2" (click)="add()" routerLink="/login">Sign up </button>
                 </div>
-                <p class="text-sm mt-3 mb-0">Already have an account? <a routerLink="/login" class="text-dark font-weight-bolder">Sign in</a></p>
+                <p class="text-sm mt-3 mb-0">Already have an account? <a routerLink="/home-login" class="text-dark font-weight-bolder">Sign in</a></p>
               </form>
             </div>
           </div>
