--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -31,7 +31,7 @@
               <div class="card-footer text-center pt-0 px-lg-2 px-1">
                 <p class="mb-4 text-sm mx-auto">
                   Don't have an account?
-                  <a routerLink="/register" class="text-info text-gradient font-weight-bold">Sign up</a>
+                  <a routerLink="/home-register" class="text-info text-gradient font-weight-bold">Sign up</a>
                 </p>
               </div>
             </div>
