added components and routing

--- a/src/app/applicant-components/applicant-bootcamp-list/applicant-bootcamp-list.component.html
+++ b/src/app/applicant-components/applicant-bootcamp-list/applicant-bootcamp-list.component.html
@@ -1,19 +1,9 @@
-<main class="main-content border-radius-lg">
-  <app-applicant-navbar></app-applicant-navbar>
-  <div class="container-fluid py-4">
-  </div>
-</main>
-
-
-<div class="container">
-  <!-- <button type="button" class="btn bg-gradient-dark" routerLink="applicant-bootcamp-list">BOOTCAMP LİSTESİ</button>
-  <button type="button" class="btn bg-gradient-dark" routerLink="applicant-instructor-list">EĞİTMEN LİSTESİ</button> -->
+<div class="container mt-8">
   <div class="row">
-    <router-outlet></router-outlet>
-    <!-- <div class="dropdown mb-5 mt-4">
-      <a class="btn bg-gradient-dark dropdown-toggle" data-bs-toggle="dropdown" id="navbarDropdownMenuLink2">
+    <div class="dropdown mb-5 mt-4">
+      <!-- <a class="btn bg-gradient-dark dropdown-toggle" data-bs-toggle="dropdown" id="navbarDropdownMenuLink2">
         Eğitmenler
-      </a>
+      </a> -->
       <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
         <li>
           <a class="dropdown-item">
@@ -126,7 +116,7 @@
     </div>
 
 
- -->
+
 
   </div>
 
