--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,6 +23,32 @@
               
             </a>
           </div>
+         
+          <div class="col-auto m-auto">
+
+            <a class="text-white cursor-pointer">
+              <li class="nav-item d-flex align-items-center">
+                <a href="javascript:;" class="nav-link text-body font-weight-bold">
+                  <span class="d-sm-inline d-none text-light" >EĞİTMENLER </span>
+                </a>
+              </li>
+              
+              
+            </a>
+          </div>
+          <div class="col-auto m-auto">
+
+            <a class="text-white cursor-pointer">
+              <li class="nav-item d-flex align-items-center">
+                <a href="javascript:;" class="nav-link text-body font-weight-bold">
+                  <span class="d-sm-inline d-none text-light" >HAKKIMIZDA </span>
+                </a>
+              </li>
+              
+              
+            </a>
+          </div>
+          
           
           <div class="col-auto m-auto">
 
