--- a/src/app/layouts/applicant-layouts/applicant-navbar/applicant-navbar.component.html
+++ b/src/app/layouts/applicant-layouts/applicant-navbar/applicant-navbar.component.html
@@ -120,10 +120,10 @@
 
 <!-- Navbar -->
 <nav
-  class="navbar navbar-expand-lg blur blur-rounded bg-gradient-dark top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
+  class="navbar navbar-expand-lg  blur blur-rounded bg-gradient-dark top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
   <div class="container pe-0">
-    <a class="navbar-brand font-weight-bolder text-light ms-lg-0 ms-3 " href="../pages/dashboard.html">
-      <h2 class="text-light">Pair 4 Bootcamp</h2>
+    <a class="navbar-brand font-weight-bolder text-light ms-lg-0 ms-3">
+      <h4 class="text-light ">Pair 4 Bootcamp</h4>
     </a>
     <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation"
       aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -136,23 +136,23 @@
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="navbar-nav mx-auto ms-xl-auto me-xl-7">
         <li class="nav-item">
-          <a class="nav-link me-2 text-light fs-5" routerLink="applicant-bootcamp-list">
+          <a class="nav-link me-2 text-light fs-6" routerLink="applicant-bootcamp-list">
             Bootcamp Listesi
           </a>
         </li>
         <li>
-          <a class="nav-link me-2 text-light fs-5" routerLink="applicant-instructor-list">
+          <a class="nav-link me-2 text-light fs-6" routerLink="applicant-instructor-list">
             Eğitmen Listesi
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link me-2 text-light fs-5">
+          <a class="nav-link me-2 text-light fs-6">
             <i class="fa fa-user opacity-6 text-light me-1"></i>
             Profile
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link me-2 text-light fs-5">
+          <a class="nav-link me-2 text-light fs-6">
             <i class="fas fa-user-circle opacity-6 text-light me-1"></i>
             Sign Out
           </a>
