--- a/src/app/pages/instructor/instructor.component.html
+++ b/src/app/pages/instructor/instructor.component.html
@@ -1,1 +1,6 @@
-
+  <main class="main-content border-radius-lg fixed-start">
+    <app-instructor-navbar></app-instructor-navbar>
+    <div class="container-fluid py-8">
+      <router-outlet></router-outlet>  
+    </div>
+  </main>
