--- a/src/app/instructor-components/instructor-applicant-list/instructor-applicant-list.component.html
+++ b/src/app/instructor-components/instructor-applicant-list/instructor-applicant-list.component.html
@@ -1,1 +1,48 @@
-<p>instructor-applicant-list works!</p>
+
+    <div class="container" >
+        <div class="row">
+    <div class="col-md-4 mt-8" *ngFor="let applicant of applicants">
+      <div class="card x">
+        <img class="card-img-top" src={{applicant.img}}>
+        <div class="position-relative" style="height: 50px;overflow: hidden;margin-top: -50px;z-index:2;position: relative;">
+          <div class="position-absolute w-100 top-0" style="z-index: 1;">
+              <svg class="waves waves-sm" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 40" preserveAspectRatio="none" shape-rendering="auto">
+                <defs>
+                  <path id="card-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
+                </defs>
+                <g class="moving-waves">
+                  <use xlink:href="#card-wave" x="48" y="-1" fill="rgba(255,255,255,0.30"></use>
+                  <use xlink:href="#card-wave" x="48" y="3" fill="rgba(255,255,255,0.35)"></use>
+                  <use xlink:href="#card-wave" x="48" y="5" fill="rgba(255,255,255,0.25)"></use>
+                  <use xlink:href="#card-wave" x="48" y="8" fill="rgba(255,255,255,0.20)"></use>
+                  <use xlink:href="#card-wave" x="48" y="13" fill="rgba(255,255,255,0.15)"></use>
+                  <use xlink:href="#card-wave" x="48" y="16" fill="rgba(255,255,255,0.99)"></use>
+                </g>
+              </svg>
+            </div>
+        </div>
+        <div class="card-body">
+          <!-- <h4>
+           {{blacklist.id}}
+          </h4> -->
+          <!-- <p>
+            {{blacklist.applicantId}}
+          </p><br> -->
+          <p style="color:saddlebrown; font-size: 2rem;">
+            <strong>{{applicant.firstName}} {{applicant.lastName}}</strong>
+          </p>
+            <i>{{applicant.email}}</i>
+          <p>
+            <strong><span style="font-size: 1.1rem;"> Hakkında:</span></strong> {{applicant.about}}
+          </p>
+          <p>
+            <strong><span style="font-size: 1.1rem;">Doğum Tarihi: </span></strong>{{applicant.dateOfBirth}}
+          </p>
+          <a  class="text-primary icon-move-right">sadffsa
+            <i class="fas fa-arrow-left text-sm ms-1" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+</div>
+</div>
