--- a/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
+++ b/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
@@ -15,17 +15,22 @@
     <div class="collapse navbar-collapse" id="navigation">
       <ul class="navbar-nav mx-auto ms-xl-auto me-xl-7">
         <li class="nav-item">
-          <a class="nav-link me-2 text-light fs-6" routerLink="applicant-bootcamp-list">
-            Bootcamp Listesi
+          <a class="nav-link me-2 text-light fs-6" routerLink="instructor-blacklist">
+            Kara Liste
           </a>
         </li>
         <li>
-          <a class="nav-link me-2 text-light fs-6" routerLink="applicant-instructor-list">
+          <a class="nav-link me-2 text-light fs-6" routerLink="instructor-list">
             Eğitmen Listesi
           </a>
         </li>
+        <li>
+         <a class="nav-link me-2 text-light fs-6" routerLink="instructor-applicant-list">
+            Aday Listesi
+          </a>
+         </li>
         <li class="nav-item">
-          <a class="nav-link me-2 text-light fs-6">
+          <a class="nav-link me-2 text-light fs-6" routerLink="instructor-profile">
             <i class="fa fa-user opacity-6 text-light me-1"></i>
             Profile
           </a>
