--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -6,8 +6,8 @@
           <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
             <div class="card card-plain mt-8">
               <div class="card-header pb-0 text-left bg-transparent">
-                <h3 class="font-weight-bolder text-info text-gradient">Welcome back</h3>
-                <p class="mb-0">Enter your email and password to sign in</p>
+                <h3 class="font-weight-bolder text-info text-gradient">Hoşgeldin</h3>
+                <p class="mb-0">Giriş yapmak için e-posta ve şifrenizi girin</p>
               </div>
               <div class="card-body">
                 <form role="form" [formGroup]="loginAddForm">
@@ -15,23 +15,23 @@
                   <div class="mb-3">
                     <input type="email" class="form-control" placeholder="Email" aria-label="Email" formControlName="email" aria-describedby="email-addon">
                   </div>
-                  <label>Password</label>
+                  <label>Şifre</label>
                   <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Password" aria-label="Password"  formControlName="password" aria-describedby="password-addon">
                   </div>
                   <div class="form-check form-switch">
                     <input class="form-check-input" type="checkbox" id="rememberMe" checked="">
-                    <label class="form-check-label" for="rememberMe">Remember me</label>
+                    <label class="form-check-label" for="rememberMe">Hatırla Beni</label>
                   </div>
                   <div class="text-center">
-                    <button type="button" class="btn bg-gradient-info w-100 mt-4 mb-0" (click)="login()">Sign in</button>
+                    <button type="button" class="btn bg-gradient-info w-100 mt-4 mb-0" (click)="login()">Giriş Yap</button>
                   </div>
                 </form>
               </div>
               <div class="card-footer text-center pt-0 px-lg-2 px-1">
                 <p class="mb-4 text-sm mx-auto">
-                  Don't have an account?
-                  <a routerLink="/home-register" class="text-info text-gradient font-weight-bold">Sign up</a>
+                  Hesap açmak için?
+                  <a routerLink="/home-register" class="text-info text-gradient font-weight-bold">Kayıt Ol</a>
                 </p>
               </div>
             </div>
